fix: date/datatime variables are exported as chars when there are categories, number values handled when importing date/datetime variables